# RocketRecoveryTutorial

./: .gitignore  README.md  basicCoding.py  resuableRocketCheckList.txt  starShipLaunch.py  starShipRecovery.py  urls.txt
KOS/: bst-pidloop.ks
craft/: B1040.7.craft  rocketDrone.craft
docs/krpcCppVcpkg/: 不想支持find_package，只想快速使用vcpkg编译的教程，相对简单.txt  想使用find_package时并且支持Debug的教程.txt
docs/krpcCppVcpkg/krpc C++源码中文件/: CMakeLists_modified.txt  CMakeLists_modified_no_find_package_only_build.txt  CMakeLists_orgin.txt  MykrpcConfig.cmake.in
docs/krpcCppVcpkg/使用时的文件/: CMakeLists_with_find_package.txt
krpcMultiRocket_cpp/: CMakeLists.txt  main.cpp
krpcMultiRocket_cpp_python_failed/: CMakeLists.txt  main.cpp
krpcMultiRocket_cpp_python_failed/libs/: test1.py  test2.py  test3.py  test4.py
krpcMultiRocket_cpp_windows_vcpkg/使用时的文件/: CMakeLists_without_find_package.txt
krpcMultiRocket_python/: multi.py
pacifier/: form.ui  pacifier.pyproject  readme.md  requirements.txt  settings.py  supportFuncs.py  ui_form.py  widget.py
simulations/: basicPID.py  descendingModel.py  discussOnKd.py  discussOnKi.py  discussOnKp.py  idealPID.py  simple_pid.py  whiteNoise.py
simulink/: hover.slx
